[package]
name = "rust-prometheus-nvidia-gpu"
version = "0.1.0"
authors = ["Jan-Christoph Klie <git@mrklie.com>"]
edition = "2018"

[dependencies]
hyper = "0.12"
lazy_static = "1.3"
nvml-wrapper = { git = "https://github.com/Cldfire/nvml-wrapper.git", branch = "devel" }

[dependencies.prometheus]
git = "https://github.com/pingcap/rust-prometheus.git"
features = ["nightly"]