[package]
name = "prometheus-nvidia-gpu"
version = "0.1.0"
authors = ["Jan-Christoph Klie <git@mrklie.com>"]
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4"
nvml-wrapper = "0.6.0"
procfs = "0.9.0"
users = "0.11.0"

[dependencies.prometheus]
git = "https://github.com/pingcap/rust-prometheus.git"
features = ["nightly"]
